<resources>
    <string name="app_name">In Class 2b</string>
    <string name="meters">Meters:</string>
    <string name="inch">Inches:</string>
    <string name="feet">Feets:</string>
    <string name="miles">Miles:</string>
    <string name="result">Result:</string>
    <string name="hint">Enter Distance</string>
    <string name="to_inch">To Inches</string>
    <string name="to_feet">To Feets</string>
    <string name="to_miles">To Miles</string>
    <string name="clear_all">Clear All</string>
    <string name="convert">Convert</string>
    <string name="emptyInput">Input is Empty</string>
    <string name="emptySelection">Radio Button not selected</string>
</resources>
